--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -1,4 +1,4 @@
-name: Deploy Terraform state to backend
+name : Deploy Terraform state to backend
 
 on:
   workflow_dispatch:
@@ -13,30 +13,29 @@ jobs:
         shell: bash
     
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+      - name: checkout
+        uses: actions/checkout@v2.3.4
 
       - name: Deploy TF State
         run: |
           set -a
           source .env.backend
-
+          az login --service-principal \
+            -u ${{ secrets.AZURE_CLIENT_ID }} \
+            -p ${{ secrets.AZURE_CLIENT_SECRET }} \
+            --tenant ${{ secrets.AZURE_TENANT_ID }}
+          
           az group create \
-            -l $TF_VAR_location \
+            -l $TF_VAR_location
             -n $TF_VAR_resource_group_name
 
           az storage account create \
             -n $TF_VAR_state_storage_account_name \
-            -g $TF_VAR_resource_group_name \
+            -g $TF_VAR_state_resource_group_name \
             -l $TF_VAR_location \
             --sku Standard_LRS \
             --allow-blob-public-access false
 
           az storage container create \
-            --name "tfstate" \
+            --name tfstate \
             --account-name $TF_VAR_state_storage_account_name
