--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -22,7 +22,7 @@ jobs:
 
           az group create \
             --name $TF_VAR_resource_group_name
-            -l $TF_VAR_location
+            -location $TF_VAR_location
 
           az storage account create \
             -n $TF_VAR_state_storage_account_name \
