--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -21,8 +21,8 @@ jobs:
             --tenant ${{ secrets.TENANT_ID }}
 
           az group create \
-            --name $TF_VAR_resource_group_name
-            --location $TF_VAR_location
+            -l $TF_VAR_location \
+            -n $TF_VAR_resource_group_name
 
           az storage account create \
             -n $TF_VAR_state_storage_account_name \
