--- a/.env.backend
+++ b/.env.backend
@@ -2,3 +2,4 @@ TF_VAR_state_resource_group_name=tfaz-bcknd-rg
 TF_VAR_location=norwayeast
 TF_VAR_state_storage_account_container_name=tfstate
 TF_VAR_state_storage_account_name=tfazbckndstg
+TF_VAR_state_key_vault_name=tfaz-bcknd-kv
