--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -64,14 +64,14 @@ jobs:
         run: |
           set -a
           source .env.backend
-          backend_SPNid=$(az ad sp show --id ${{ secrets.CLIENT_ID }} --query objectId -o tsv)
-
-          echo "backend_SPNid: SPNObjectId"
+          SPN_OBJECT_ID=$(az ad sp show --id "$SPN_NAME" --query objectId -o tsv)
+          echo "::set-output name=spn_object_id::$SPN_OBJECT_ID"
 
           az keyvault set-policy \
             -n $TF_VAR_state_key_vault_name \
-            --object-id $SPNObjectId \
+            --object-id $SPN_OBJECT_ID \
             --secret-permissions get list set
+
 
       - name: Create SSHKey
         run: |
