--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -60,18 +60,18 @@ jobs:
             -l $TF_VAR_location \
             -g $TF_VAR_state_resource_group_name
 
-      - name: Retrieve SPN ObjectID and Grant SPN Access to KV
+      - name: Fetch SPN ObjectID and Grant SPN Access to KV
         run: |
           set -a
           source .env.backend
-          SPN_OBJECT_ID=$(az ad sp show --id ${{ secrets.CLIENT_ID }} --query objectId -o tsv)
-          echo "::set-output name=spn_object_id::$SPN_OBJECT_ID"
+          backend_SPNid=$(az ad sp show --id ${{ secrets.CLIENT_ID }} --query id -o tsv)
+
+          echo "backend_SPNid:$SPNObjectId"
 
           az keyvault set-policy \
             -n $TF_VAR_state_key_vault_name \
-            --object-id $SPN_OBJECT_ID \
+            --object-id $SPNObjectId \
             --secret-permissions get list set
-
 
       - name: Create SSHKey
         run: |
