--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -59,6 +59,7 @@ jobs:
             -n $TF_VAR_state_key_vault_name \
             -l $TF_VAR_location \
             -g $TF_VAR_state_resource_group_name
+            --enable-rbac-authorization false
 
       - name: Fetch SPN ObjectID and Grant SPN Access to KV
         run: |
@@ -66,12 +67,15 @@ jobs:
           source .env.backend
             backend_SPNid=$(az ad sp show --id ${{ secrets.CLIENT_ID }} --query id -o tsv)
   
-            echo "backend_SPNid: backend_SPNid"
-  
-            az keyvault set-policy \
-              -n $TF_VAR_state_key_vault_name \
-              --object-id $backend_SPNid \
-              --secret-permissions get list set
+            echo "backend_SPNid: backend_SPNid" >> $GITHUB_ENV
+
+      - name: Grant SPN Access to Backend KV
+        run: |
+          az role assignment create \
+          --assignee ${{ env.backend_SPNid }} \
+          --role "Key Vault Secrets User" \
+          --scope /subscriptions/${{ secrets.SUBSCRIPTION_ID }}/resourcegroups/$TF_VAR_state_resource_group_name/providers/Microsoft.KeyVault/vaults/$TF_VAR_state_key_vault_name
+          
 
       - name: Create SSHKey
         run: |
