--- a/.github/workflows/deploy-tf-state.yml
+++ b/.github/workflows/deploy-tf-state.yml
@@ -58,7 +58,7 @@ jobs:
           az keyvault create \
             -n $TF_VAR_state_key_vault_name \
             -l $TF_VAR_location \
-            -g $TF_VAR_state_resource_group_name
+            -g $TF_VAR_state_resource_group_name \
             --enable-rbac-authorization false
 
       - name: Fetch SPN ObjectID and Grant SPN Access to KV
