--- a/.github/workflows/tfaz-release.yml
+++ b/.github/workflows/tfaz-release.yml
@@ -1,7 +1,9 @@
 on:
-    release:
-        types: [publisher]
-        branch: [main]
+  release:
+    types:
+      - published
+    branches:
+      - main
 
 name: On release Main 
 
