--- a/.env.backend
+++ b/.env.backend
@@ -3,3 +3,4 @@ TF_VAR_location=norwayeast
 TF_VAR_state_storage_account_container_name=tfstatebckndcont
 TF_VAR_state_storage_account_name=backndtfazstg
 TF_VAR_state_key_vault_name=bcknd-tfaz-kv-01
+TF_VAR_state_key_name=tfstatebcknd
