--- a/.github/workflows/tfaz-release.yml
+++ b/.github/workflows/tfaz-release.yml
@@ -1,10 +1,8 @@
 name: Deploy Terraform on Release
 
 on:
-  release:
-    types: [published]
   push:
-    branches:
+    branches: 
       - main
 
 jobs:
@@ -29,9 +27,9 @@ jobs:
       - name: Configure Azure credentials
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          client-id: ${{ secrets.CLIENT_ID }}
+          tenant-id: ${{ secrets.TENANT_ID }}
+          client-secret: ${{ secrets.CLIENT_SECRET }}
 
       - name: Initialize Terraform
         working-directory: ./terraform
