Update: yml config

--- a/.github/workflows/tfaz-release.yml
+++ b/.github/workflows/tfaz-release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Configure Azure credentials
         uses: azure/login@v2
         with:
-          creds: '{"clientId":"${{ secrets._CLIENT_ID }}","clientSecret":"${{ secrets._CLIENT_SECRET }}","subscriptionId":"${{ secrets._SUBSCRIPTION_ID }}","tenantId":"${{ secrets._TENANT_ID }}"}'
+          creds: '{"clientId":"${{ secrets._CLIENT_ID }}","clientSecret":"${{ secrets._CLIENT_SECRET }}","tenantId":"${{ secrets._TENANT_ID }}"}'
 
 
       - name: Initialize Terraform
