--- a/.github/workflows/tfaz-release.yml
+++ b/.github/workflows/tfaz-release.yml
@@ -1,38 +1,56 @@
-name: Deploy Terraform on Release
-'on':
+on:
   release:
-    types:
-      - published
-  push:
-    branches:
-      - main
+    types: [published]
+    branches: [main]
+
+name: On Release Main
+
 jobs:
   terraform:
+    name: 'Terraform'
     runs-on: ubuntu-latest
+    env:
+      CLIENT_ID: ${{ secrets.CLIENT_ID }}
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+      TENANT_ID: ${{ secrets.TENANT_ID }}
+      TF_VERSION: 1.3.6
+
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./terraform
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Load environment variables from .env.backend
-        run: |
-          cat .env.backend | grep -v '^#' | while IFS= read -r line; do
-            echo "$line" >> $GITHUB_ENV
-          done
-      - name: Set up Terraform
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.3.6
+          terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
 
-      - name: Initialize Terraform
-        working-directory: ./terraform
-        run: terraform init
-      - name: Terraform Plan
-        working-directory: ./terraform
-        run: terraform plan -out=tfplan
-      - name: Terraform Apply
-        working-directory: ./terraform
-        run: terraform apply -input=false tfplan
+      - name: Terraform init
+        id: init
+        run: |
+          set -a 
+          source ../.env.backend
+          terraform init \
+            -backend-config="resource_group_name=$TF_VAR_state_resource_group_name" \
+            -backend-config="storage_account_name=$TF_VAR_state_storage_account_name"
+
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform plan
+        id: plan
+        run: terraform plan -no-color
+
+      - name: Terraform apply
+        id: apply
+        run: terraform apply -auto-approve
