--- a/.github/workflows/tfaz-release.yml
+++ b/.github/workflows/tfaz-release.yml
@@ -1,7 +1,7 @@
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+    branches: [main]
 
 name: On Release Main
 
@@ -10,10 +10,10 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     env:
-      CLIENT_ID: ${{ secrets.CLIENT_ID }}
-      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-      SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
-      TENANT_ID: ${{ secrets.TENANT_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VERSION: 1.3.6
 
     defaults:
