--- a/.github/workflows/tfaz-destroy.yml
+++ b/.github/workflows/tfaz-destroy.yml
@@ -1,21 +1,23 @@
-name: Destroy Infrastructure
+name: Destroy Infrastructure on PR Close
 
 on:
-  workflow_dispatch:
+  pull_request:
+    types: [closed]
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  terraform-destroy:
+    name: 'Terraform Destroy'
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == false
     env:
-        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-        TF_VERSION: 1.3.6
-        
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_VERSION: 1.3.6
+
     defaults:
-        run:
+      run:
         shell: bash
         working-directory: ./terraform
 
@@ -26,7 +28,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-        terraform_version: ${{ env.TF_VERSION }}
+          terraform_version: ${{ env.TF_VERSION }}
 
       - name: Terraform fmt
         id: fmt
@@ -35,12 +37,20 @@ jobs:
       - name: Terraform init
         id: init
         run: |
-            set -a 
-            source ../.env.backend
-            terraform init \
+          set -a 
+          source ../.env.backend
+          terraform init \
             -backend-config="resource_group_name=$TF_VAR_state_resource_group_name" \
             -backend-config="storage_account_name=$TF_VAR_state_storage_account_name"
 
+      - name: Terraform validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform plan destroy
+        id: plan
+        run: terraform plan -destroy -no-color
+
       - name: Terraform destroy
         id: destroy
-        run: terraform destroy --auto-approve
+        run: terraform destroy -auto-approve
