Update: yml config

--- a/.github/workflows/tfaz-destroy.yml
+++ b/.github/workflows/tfaz-destroy.yml
@@ -1,8 +1,7 @@
 name: Destroy Infrastructure on PR Close
 
 on:
-  pull_request:
-    types: [closed]
+  workflow_dispatch:
 
 jobs:
   terraform-destroy:
