--- a/.github/workflows/tfaz-destroy.yml
+++ b/.github/workflows/tfaz-destroy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Destroy backend
         run: |
           set -a 
-          source env.backend
+          source .env.backend
           az group delete \
           -n tfaz-bcknd-rg --yes
 
