--- a/.github/workflows/tfaz-destroy.yml
+++ b/.github/workflows/tfaz-destroy.yml
@@ -23,6 +23,11 @@
         - name: Checkout
           uses: actions/checkout@v2
 
+        - name: Az login
+          uses: azure/login@v2
+          with:
+            creds: '{"clientId":"${{ secrets.ARM_CLIENT_ID }}","clientSecret":"${{ secrets.ARM_CLIENT_SECRET }}","subscriptionId":"${{ secrets.ARM_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.ARM_TENANT_ID }}"}'
+
         - name: Destroy backend
           run: |
             az group delete \
